<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">云博移动客户端</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="api_low">当前系统版本过低,不支持该程序运行,请升级系统至Android 4.0及以上!</string>
    
    <string name="action_about">关于</string>
    <string name="about">云博移动客户端为睿亚训云博PC客户端的补充。\n更多内容请访问:云博实践数字资源库平台。\n点击确定访问。</string>
    <string name="action_help">帮助</string>
    
    <string name="iknow">知道了</string>
    
    <string name="loading_courselist">课程列表载入中,请稍候...</string>
    <string name="loading_caselist">案例列表载入中,请稍候...</string>
    
    <string name="find_new_version">发现新版本</string>
    <string name="current_version">当前版本</string>
    <string name="update_or_not">是否更新?</string>
    <string name="update_software">软件更新</string>
    <string name="update">更新</string>
    <string name="update_not_now">暂不更新</string>
    <string name="download_failed">下载失败</string>
    <string name="install">安装</string>
    <string name="install_or_not">是否安装新的应用</string>
    
    <string name="login_welcome">欢迎使用睿亚训云博移动客户端</string>
    <string name="login">登&#160;&#160;&#160;&#160;陆</string>
    <string name="input_username">输入用户名</string>
    <string name="input_passwd">输入密码</string>
    <string name="namepwnull">用户名或密码为空</string>
    <string name="user_error">用户名或密码错误</string>
    <string name="net_error">网络错误</string>
    <string name="login_wait">登陆中,请稍候...</string>
    <string name="login_remember_user">记住用户名密码</string>
    <string name="login_offline_mode">网络错误,以离线模式登陆,仅能访问已缓存的资源</string>
    
    <string name="caselist">课程案例列表</string>
    <string name="caseview">查看案例资源</string>
    <string name="course">课程</string>
    
    <string-array name="menu_array">
        <item>首页</item>
        <item>我的课程</item>
<!--         <item>公开课</item> -->
<!--         <item>课程表</item> -->
<!--         <item>通知</item> -->
        <item>设置</item>
    </string-array>
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <string name="userguide_notice">点击左上角图标或从屏幕左边沿向右滑动以打开菜单</string>
    
    <string name="notice">提示</string>
    <string name="quit_confirm">确认退出？</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    
    <string name="home_userinfo">个人信息</string>
    <string name="history">历史记录</string>
    <string name="favorite">最常浏览</string>
    <string name="user_avatar">用户头像</string>
    
    <string name="course_bixiu">必修课程</string>
    <string name="course_xuanxiu">选修课程</string>
    
    <string name="settings_cache">缓存设置</string>
    <string name="pref_setting_cache_memory">设置缓存大小</string>
    <string name="pref_cache_memory_default">2</string>
    <string-array name="pref_cache_memory_entries">
        <item>100MB</item>
        <item>200MB</item>
        <item>300MB</item>
        <item>500MB</item>
    </string-array>
    <string-array name="pref_cache_memory_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
    </string-array>
    <string name="cache_size">已缓存:</string>
    <string name="clean_cache">是否清除缓存?</string>
    <string name="clean_cache_success">清除缓存成功</string>
    <string name="settings_offline">离线模式</string>
    <string name="pref_setting_offline_title">离线模式</string>
    <string name="pref_setting_offline_summary">开启离线模式之后即可全程离线操作</string>
    <string name="pref_setting_clean_cache">清除缓存</string>
    <string name="pref_setting_cache_memory_summary">缓存越大可离线储存的内容越多</string>
    <string name="settings_schedule">课程表设置</string>
    <string name="pref_setting_notice_on_title">上课提醒</string>
    <string name="pref_setting_notice_on_summary">开启之后可在上课前收到提醒</string>
    <string name="pref_setting_notice_time">提醒时间</string>
    <string name="pref_setting_notice_time_summary">设置上课前多长时间进行提醒</string>
    <string-array name="pref_notice_time_entries">
        <item>上课前5分钟</item>
        <item>上课前10分钟</item>
        <item>上课前20分钟</item>
        <item>上课前30分钟</item>
    </string-array>
    <string-array name="pref_notice_time_values">
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
    </string-array>
    <string name="pref_setting_gotogdt">推荐应用</string>

    <string name="dl_fail_retry">下载失败，请重试</string>
    <string name="dl_btn_retry">重试</string>
    <string name="caseview_no_resource">资源未缓存，请链接网络后查看</string>
    
    <string name="dialog_load">载入中，请稍候...</string>
    <string name="no_res_cache_can_not_open">资源未缓存，无法查看</string>
    
    <string name="current_location">当前位置</string>
    
    <string name="ad_unit_id">a1516a34ce8df1e</string>
    
    <!-- for MuPDF -->
    <string name="version">1.4 (git build)</string>
	<string name="cannot_open_buffer">无法打开缓冲器</string>
	<string name="cannot_open_document">无法打开文档</string>
	<string name="cannot_open_document_Reason">无法打开文档： %1$s</string>
	<string name="cannot_open_file_Path">无法打开文件：%1$s</string>
	<string name="choose_value">选择值</string>
	<string name="copied_to_clipboard">已复制到剪贴板</string>
	<string name="copy">复制</string>
	<string name="copy_text">复制文本</string>
	<string name="copy_text_to_the_clipboard">将文本复制到剪贴板</string>
	<string name="delete">删除</string>
	<string name="dismiss">关闭</string>
	<string name="document_has_changes_save_them_">文档已变更，保存变更吗？</string>
	<string name="draw_annotation">作批注</string>
	<string name="edit_annotations">编辑批注</string>
	<string name="enter_password">输入密码</string>
	<string name="entering_reflow_mode">输入重排模式</string>
	<string name="fill_out_text_field">填充文本字段</string>
	<string name="format_currently_not_supported">当前不支持此格式</string>
	<string name="highlight">高亮</string>
	<string name="ink">墨迹</string>
	<string name="leaving_reflow_mode">正在离开重排模式</string>
	<string name="more">更多</string>
	<string name="no">否</string>
	<string name="no_further_occurrences_found">未发现更多实例。</string>
	<string name="no_media_hint">存储介质在设备和 PC 上共同使用，会导致该存储介质在设备上无法被访问</string>
	<string name="no_media_warning">没有存储介质</string>
	<string name="no_text_selected">未选择文本</string>
	<string name="not_supported">不被支持</string>
	<string name="nothing_to_save">没有要保存的内容</string>
	<string name="okay">确定</string>
	<string name="outline_title">目录</string>
	<string name="parent_directory">[向上一级]</string>
	<string name="picker_title_App_Ver_Dir">%1$s%2$s:%3$s</string>
	<string name="print">打印</string>
	<string name="print_failed">未能打印</string>
	<string name="save">保存</string>
	<string name="search">搜索</string>
	<string name="search_backwards">向后搜索</string>
	<string name="search_document">搜索文档</string>
	<string name="search_forwards">向前搜索</string>
	<string name="searching_">正在搜索…</string>
	<string name="select">选择</string>
	<string name="select_text">选择文本</string>
	<string name="strike_out">删除线</string>
	<string name="text_not_found">未发现文本</string>
	<string name="toggle_links">高亮并启用墨迹</string>
	<string name="underline">下划线</string>
	<string name="yes">是</string>
</resources>