<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/vv_no_resouce"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/caseview_no_resource"
        android:textSize="20sp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/vv_dl_fail_retry"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >

        <Button
            android:id="@+id/vv_dl_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="15dp"
            android:text="@string/dl_btn_retry" />

        <TextView
            android:id="@+id/vv_dl_fail_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/vv_dl_retry"
            android:layout_centerHorizontal="true"
            android:text="@string/dl_fail_retry"
            android:textSize="20sp" />
    </RelativeLayout>

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</FrameLayout>