<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="3dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/yellow"
        android:text="@string/home_userinfo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@drawable/yellow1" >

        <ImageView
            android:id="@+id/home_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/user_avatar"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/home_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/home_avatar"
            android:layout_toRightOf="@id/home_avatar" />

        <TextView
            android:id="@+id/home_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/home_avatar" />

        <TextView
            android:id="@+id/home_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/home_avatar"
            android:layout_toRightOf="@id/home_avatar" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/home_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue"
            android:text="@string/favorite" />

        <ListView
            android:id="@+id/home_fav_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue1" />

        <TextView
            android:id="@+id/home_fav_none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue1"
            android:text="暂无最常访问记录"
            android:visibility="gone" />

        <TextView
            android:id="@+id/home_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:background="@drawable/green"
            android:text="@string/history" />

        <ListView
            android:id="@+id/home_his_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/green1" />

        <TextView
            android:id="@+id/home_his_none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/green1"
            android:text="暂无历史记录"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>